package net.svil.bootcamp.electricity.Models

import java.time.LocalDateTime

class History(val data: Map[LocalDateTime, Long]){
  // TODO


  
}

